2010-12-02  John Sullivan  <sullivan@apple.com>

        Reviewed by Adam Roben.
        
        Slightly speculative fix for:

        <rdar://problem/8712674>
        <https://bugs.webkit.org/show_bug.cgi?id=50393>
        setStringValue: sometimes called with nil in [WebAuthenticationPanel setUpForChallenge]        

        * Panels/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel setUpForChallenge:]):
        If the realm is nil, use @"" instead.

2010-12-01  Jia Pu  <jpu@apple.com>

        Reviewed by Darin Adler.

        Support multiple correction candidates panel for misspelled word on Mac OS X.
        https://bugs.webkit.org/show_bug.cgi?id=50137
        <rdar://problem/8568059>

        This patch is for supporting multiple correction suggestion panel on Mac OS X.
        The behavior and implementation is similar to that of reversion candiate panel.

        * WebCoreSupport/WebEditorClient.h: Adopted new signatures defined in base class.

        * WebCoreSupport/WebEditorClient.mm:  Adopted new signatures defined in base class.
          Added code to handle new multiple suggestion canidate panel type.
        (WebEditorClient::showCorrectionPanel):
        (WebEditorClient::getGuessesForWord):

2010-12-01  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=46645
        
        Part 1 of making scrolling work with vertical text. This patch generalizes the scrollOriginX concept
        recently added for horizontal RTL documents and applies it to writing modes as well.  Now the
        scrollOrigin is a point, since you can start off locked to the bottom or locked to the right.
        
        This patch also fixes numerous bugs with the scrollOrigin code using native Mac NSScrollViews and
        makes them behave the same as the cross-platform code (allowing for cross-platform results to be
        landed).

        * WebView/WebDynamicScrollBarsView.mm: