@@ -1,3 +1,14 @@
+2010-12-02  Joseph Pecoraro  <joepeck@webkit.org>
+
+        Reviewed by Eric Carlson.
+
+        Style Fixes in WebPluginController
+        https://bugs.webkit.org/show_bug.cgi?id=50397
+
+        * Plugins/WebPluginController.mm:
+        (-[WebPluginController startAllPlugins]):
+        (-[WebPluginController stopAllPlugins]):
+
 2010-12-02  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Adam Roben.
